--- a/package.json
+++ b/package.json
@@ -25,71 +25,71 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.7",
-    "babel-core": "^6.4.5",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.1",
-    "babel-plugin-webpack-alias": "^2.1.1",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.7.2",
-    "babel-types": "^6.7.2",
-    "chai": "^3.5.0",
-    "chai-enzyme": "^0.5.1",
-    "classnames": "^2.2.3",
-    "copy-to-clipboard": "^3.0.4",
-    "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.23.1",
-    "enzyme": "^2.1.0",
-    "es6-promise": "^3.1.2",
-    "eslint": "^3.0.1",
+    "autoprefixer": "^7.1.0",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "babel-types": "^6.24.1",
+    "chai": "^4.1.0",
+    "chai-enzyme": "^0.8.0",
+    "classnames": "^2.2.5",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.1",
+    "enzyme": "^2.8.2",
+    "es6-promise": "^4.1.0",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.10.2",
     "eslint-plugin-jsx-a11y": "^2.0.0",
     "eslint-plugin-react": "^5.2.2",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
-    "husky": "^0.11.9",
-    "jsdom": "^3.1.2",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "fetch-mock": "^5.10.0",
+    "html-webpack-plugin": "^2.28.0",
+    "husky": "^0.13.3",
+    "jsdom": "^9.11.0",
     "mocha": "^2.4.5",
-    "nyc": "^8.1.0",
-    "postcss-discard-duplicates": "^2.0.1",
-    "postcss-discard-unused": "^2.2.1",
+    "postcss-discard-duplicates": "^2.1.0",
+    "postcss-discard-unused": "^2.2.3",
     "postcss-loader": "^0.9.1",
-    "rimraf": "^2.5.3",
-    "sinon": "^1.17.5",
-    "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.1",
+    "react-test-renderer": "^15.5.4",
+    "redux-mock-store": "^1.2.3",
+    "rimraf": "^2.6.1",
+    "script-ext-html-webpack-plugin": "^1.8.0",
+    "sinon": "^2.2.0",
+    "sinon-chai": "^2.10.0",
+    "sinon-stub-promise": "^4.0.0",
+    "style-loader": "^0.17.0",
     "stylus": "^0.54.5",
-    "stylus-loader": "^2.3.1",
-    "webpack": "1.12.14",
-    "webpack-dashboard": "0.1.8",
-    "webpack-dev-middleware": "^1.7.0",
-    "webpack-dev-server": "^1.15.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "stylus-loader": "^3.0.1",
+    "webpack": "3.3.0",
+    "webpack-dashboard": "0.4.0",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.6.1",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/guilouro/react-redux-boilerplate.git"
   },
   "author": "Guilherme Louro",
-  "private": true,
   "dependencies": {
-    "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
-    "react": "^15.0.1",
-    "react-addons-test-utils": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-hot-loader": "^3.0.0-beta.3",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.0.0",
-    "react-router-redux": "^4.0.5",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "react-redux": "^5.0.4",
+    "react-router": "^3.0.4",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
-    "redux-logger": "^2.6.1",
-    "redux-promise-middleware": "^4.0.0",
-    "redux-thunk": "^2.1.0",
-    "store": "^1.3.20"
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^4.2.1",
+    "redux-thunk": "^2.2.0"
   }
 }
